--- a/src/schooltool/gradebook/locales/nl.po
+++ b/src/schooltool/gradebook/locales/nl.po
@@ -7,16 +7,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: schooltool\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"POT-Creation-Date: 2012-03-15 18:58+0200\n"
-"PO-Revision-Date: 2012-03-03 09:46+0000\n"
+"POT-Creation-Date: 2012-03-16 18:31+0200\n"
+"PO-Revision-Date: 2012-03-17 10:23+0000\n"
 "Last-Translator: rob <linuxned@gmail.com>\n"
 "Language-Team: Dutch <nl@li.org>\n"
-"Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-03-04 05:18+0000\n"
-"X-Generator: Launchpad (build 14886)\n"
+"X-Launchpad-Export-Date: 2012-03-18 05:02+0000\n"
+"X-Generator: Launchpad (build 14951)\n"
+"Language: nl\n"
 
 #: /src/schooltool/gradebook/activity.py:52
 msgid "Sheet1"
@@ -1302,7 +1302,7 @@ msgstr "Deze categorie bewerken"
 
 #: /src/schooltool/gradebook/browser/templates/f_categories.pt:41
 msgid "There are no activity categories."
-msgstr ""
+msgstr "Er zijn geen activiteitscategorieën."
 
 #: /src/schooltool/gradebook/browser/templates/f_categories.pt:44
 #: /src/schooltool/gradebook/browser/templates/f_course_worksheet_edit.pt:42
@@ -1326,7 +1326,7 @@ msgstr "Verwijderen?"
 
 #: /src/schooltool/gradebook/browser/templates/f_course_worksheet_edit.pt:39
 msgid "There are no course activities."
-msgstr ""
+msgstr "Er zijn geen vakactiviteiten."
 
 #: /src/schooltool/gradebook/browser/templates/f_course_worksheet_templates.pt:17
 msgid "This course has no course worksheet templates."
@@ -1403,7 +1403,21 @@ msgstr "Naam"
 msgid "Save"
 msgstr "Opslaan"
 
-#: /src/schooltool/gradebook/browser/templates/f_gradebook_overview.pt:84
+#: /src/schooltool/gradebook/browser/templates/f_gradebook_overview.pt:4
+msgid "This section contains only worksheets that are hidden."
+msgstr "Deze sectie bevat alleen werkbladen die verborgen zijn."
+
+#: /src/schooltool/gradebook/browser/templates/f_gradebook_overview.pt:8
+msgid "You can ${unhide_worksheets}, or ${add_worksheet}."
+msgstr "U kunt ${unhide_worksheets}, of ${add_worksheet}."
+
+#: /src/schooltool/gradebook/browser/templates/f_gradebook_overview.pt:22
+msgid "Choose a grade to apply to all the students in the gradebook column."
+msgstr ""
+"Selecteer een cijfer om toe te passen voor alle leerlingen in de "
+"cijferlijstkolom."
+
+#: /src/schooltool/gradebook/browser/templates/f_gradebook_overview.pt:85
 msgid "Fill empty cells"
 msgstr "Lege cellen vullen"
 
@@ -1463,7 +1477,7 @@ msgstr "Geef een score"
 
 #: /src/schooltool/gradebook/browser/templates/f_gradebook_overview.pt:218
 msgid "Fill down"
-msgstr ""
+msgstr "Toepassen"
 
 #: /src/schooltool/gradebook/browser/templates/f_gradebook_overview.pt:230
 msgid "Move left"
@@ -1579,11 +1593,69 @@ msgstr "Rapportblad"
 msgid "This year has no report sheets deployed."
 msgstr "Dit jaar heeft geen toegepaste rapportbladen."
 
-#: /src/schooltool/gradebook/browser/templates/f_mygrades.pt:5
+#: /src/schooltool/gradebook/browser/templates/f_manage_course_worksheet_templates.pt:3
+msgid "Manage Worksheet Templates"
+msgstr "Werkbladsjabloonbeheer"
+
+#: /src/schooltool/gradebook/browser/templates/f_manage_report_sheet_templates_overview.pt:5
+msgid "Manage Report Sheet Templates"
+msgstr "Rapportbladsjabloonbeheer"
+
+#: /src/schooltool/gradebook/browser/templates/f_manage_report_sheet_templates_overview.pt:14
+msgid "There are ${count} report sheet templates set up."
+msgstr "Er zijn ${count} rapportbladsjablonen ingesteld."
+
+#: /src/schooltool/gradebook/browser/templates/f_manage_report_sheet_templates_overview.pt:17
+#: /src/schooltool/gradebook/browser/templates/f_templates_overview.pt:17
+msgid "There are no report sheet templates set up."
+msgstr "Er zijn geen rapportbladsjablonen ingesteld."
+
+#: /src/schooltool/gradebook/browser/templates/f_manage_report_sheets_overview.pt:5
+msgid "Manage Deployed Report Sheets"
+msgstr "Toegepast rapportblad-beheer"
+
+#: /src/schooltool/gradebook/browser/templates/f_manage_report_sheets_overview.pt:5
+#: /src/schooltool/gradebook/gradebook_init.py:53
+msgid "Deployed Report Sheets"
+msgstr "Toegepaste rapportbladen"
+
+#: /src/schooltool/gradebook/browser/templates/f_manage_report_sheets_overview.pt:16
+msgid "There are ${count} report sheets deployed in ${schoolyear}"
+msgstr "Er zijn ${count} rapportbladen toegepast in ${schoolyear}"
+
+#: /src/schooltool/gradebook/browser/templates/f_manage_report_sheets_overview.pt:20
+msgid "There are no report sheets deployed in ${schoolyear}"
+msgstr "Er zijn geen rapportbladen toegepast in ${schoolyear}"
+
+#: /src/schooltool/gradebook/browser/templates/f_mygrades.pt:6
 #: /src/schooltool/gradebook/browser/templates/f_student_gradebook.pt:5
 #: /src/schooltool/gradebook/browser/templates/mygrades.pt:75
 msgid "Nothing Graded"
 msgstr "Geen cijfers gegeven"
+
+#: /src/schooltool/gradebook/browser/templates/f_report_card_layout.pt:9
+#: /src/schooltool/gradebook/browser/templates/layout_report_card.pt:16
+msgid "Grid Columns"
+msgstr "Rasterkolommen"
+
+#: /src/schooltool/gradebook/browser/templates/f_report_card_layout.pt:14
+#: /src/schooltool/gradebook/browser/templates/f_report_card_layout.pt:50
+#: /src/schooltool/gradebook/browser/templates/layout_report_card.pt:21
+#: /src/schooltool/gradebook/browser/templates/layout_report_card.pt:83
+msgid "Heading"
+msgstr "Koptekst"
+
+#: /src/schooltool/gradebook/browser/templates/f_report_card_layout.pt:40
+msgid "This report has no grid columns."
+msgstr "Dit rapport heeft geen rasterkolommen."
+
+#: /src/schooltool/gradebook/browser/templates/f_report_card_layout.pt:45
+msgid "Outline Items"
+msgstr "Overzichtsitems"
+
+#: /src/schooltool/gradebook/browser/templates/f_report_card_layout.pt:76
+msgid "This report has no outline items."
+msgstr "Dit rapport heeft geen overzichtsitems."
 
 #: /src/schooltool/gradebook/browser/templates/f_report_card_layout_related.pt:8
 msgid ""
@@ -1642,11 +1714,12 @@ msgstr "Selecteer een termijn of pas het toe voor het hele jaar."
 
 #: /src/schooltool/gradebook/browser/templates/f_report_sheets.pt:97
 msgid ""
-"If you deploy the same template multiple times, give each deployment an "
-"easily distinguishable name."
+"If you deploy the same template multiple times in the same term, give each "
+"deployment an easily distinguishable name."
 msgstr ""
-"Wanneer u hetzelfde sjabloon meerdere malen toepast, zorg er dan voor dat u "
-"elke toepassing van dit sjabloon een makkelijk herkenbare naam geeft."
+"Wanneer u hetzelfde sjabloon meerdere malen toepast in dezelfde termijn, "
+"zorg er dan voor dat u elke toepassing van dit sjabloon een makkelijk "
+"herkenbare naam geeft."
 
 #: /src/schooltool/gradebook/browser/templates/f_report_sheets_related.pt:12
 msgid "The first step in the process is to ${add-sheet}"
@@ -1736,7 +1809,7 @@ msgstr "Rapportactiviteiten"
 
 #: /src/schooltool/gradebook/browser/templates/f_template_manage.pt:39
 msgid "There are no report activities."
-msgstr ""
+msgstr "Er zijn geen rapportactiviteiten."
 
 #: /src/schooltool/gradebook/browser/templates/f_template_related.pt:6
 msgid ""
@@ -1753,10 +1826,6 @@ msgid ""
 msgstr ""
 "Elk toegepast werkblad zal de rapportactiviteiten bevatten, zoals ingesteld "
 "in het sjabloon."
-
-#: /src/schooltool/gradebook/browser/templates/f_templates_overview.pt:17
-msgid "There are no report sheet templates set up."
-msgstr "Er zijn geen rapportbladsjablonen ingesteld."
 
 #: /src/schooltool/gradebook/browser/templates/f_weight_categories_related.pt:6
 #: /src/schooltool/gradebook/browser/templates/weight_categories.pt:18
@@ -1915,19 +1984,10 @@ msgstr "Toegepaste rapportblad verbergen"
 msgid "Layout Report Card"
 msgstr "Rapportkaartindeling"
 
-#: /src/schooltool/gradebook/browser/templates/layout_report_card.pt:16
-msgid "Grid Columns"
-msgstr "Rasterkolommen"
-
 #: /src/schooltool/gradebook/browser/templates/layout_report_card.pt:20
 #: /src/schooltool/gradebook/browser/templates/layout_report_card.pt:82
 msgid "Source"
 msgstr "Bron"
-
-#: /src/schooltool/gradebook/browser/templates/layout_report_card.pt:21
-#: /src/schooltool/gradebook/browser/templates/layout_report_card.pt:83
-msgid "Heading"
-msgstr "Koptekst"
 
 #: /src/schooltool/gradebook/browser/templates/layout_report_card.pt:57
 msgid "New Column"
@@ -2055,12 +2115,6 @@ msgstr "Werkbladdetails"
 msgid "Worksheet Information"
 msgstr "Werkbladinformatie"
 
-#: /src/schooltool/gradebook/generations/tests/test_evolve3.py:48
-#: /src/schooltool/gradebook/gradebook_init.py:53
-msgid "Deployed Report Sheets"
-msgstr "Toegepaste rapportbladen"
-
-#: /src/schooltool/gradebook/generations/tests/test_evolve3.py:49
 #: /src/schooltool/gradebook/gradebook_init.py:56
 msgid "Report Card Layouts"
 msgstr "Rapportkaartindelingen"
@@ -2113,11 +2167,7 @@ msgstr "De datum waarop een cijfer voor de activiteit zal worden gegeven."
 msgid "The column label for the activity in the gradebook."
 msgstr "Het kolomlabel voor de activiteit in de cijferlijst."
 
-#: /src/schooltool/gradebook/interfaces.py:144
-msgid "A detailed description of the activity."
-msgstr "Een gedetailleerde omschrijving van de activiteit."
-
-#: /src/schooltool/gradebook/interfaces.py:149
+#: /src/schooltool/gradebook/interfaces.py:180
 msgid "The activity category"
 msgstr "De activiteit-categorie"
 
@@ -2199,11 +2249,7 @@ msgstr "Een korte naam voor de externe activiteitenbron"
 msgid "A brief title of the external activity."
 msgstr "Een korte naam voor de externe activiteit."
 
-#: /src/schooltool/gradebook/interfaces.py:409
-msgid "A detailed description of the external activity."
-msgstr "Een gedetailleerde omschrijving van de externe activiteit."
-
-#: /src/schooltool/gradebook/interfaces.py:427
+#: /src/schooltool/gradebook/interfaces.py:457
 msgid "Linked Column Activity Source"
 msgstr "Gekoppelde kolom activiteitenbron"
 
@@ -2537,6 +2583,12 @@ msgstr "slagingsscore:"
 #: /src/schooltool/requirement/browser/scoresystem_view.pt:3
 msgid "View Score System"
 msgstr "Scoresysteem tonen"
+
+#~ msgid "A detailed description of the activity."
+#~ msgstr "Een gedetailleerde omschrijving van de activiteit."
+
+#~ msgid "A detailed description of the external activity."
+#~ msgstr "Een gedetailleerde omschrijving van de externe activiteit."
 
 #~ msgid ""
 #~ "Your browser either has Javascript turned off, or it is not supported. "
