--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,14 +2,14 @@
 CHANGES
 =======
 
-2.0.4 (unreleased)
+2.1.0 (2012-04-18)
 ------------------
 
-- Period order on report incorrect (https://launchpad.net/bugs/932508)
+- Report sheets XLS export (https://launchpad.net/bugs/976757)
+- Period order in attendance report incorrect (https://launchpad.net/bugs/932508)
+- Round the score in student gradebook (https://launchpad.net/bugs/950531)
 - Refactor worksheets to separate activities and enable different kinds of
   worksheets.
-- Report Card Data should be Exportable (https://launchpad.net/bugs/976757)
-- Round the score in student gradebook (https://launchpad.net/bugs/950531)
 - Updated translations
 
 
