--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,6 +6,7 @@ CHANGES
 ------------------
 
 - Fix a rare failure when upgrading from gradebook <= 0.9.0 (LP: #995615)
+- Report Layout displays a server error (https://launchpad.net/bugs/1008176)
 
 
 2.1.0 (2012-04-18)
